Fixing alignment on text inside input elements

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,7 +58,9 @@ label {
 
 input,
 select {
-  display: block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: flex-start;
 
   -webkit-appearance: none;
   -moz-appearance: none;
